--- a/gameoflife/gameoflife.html
+++ b/gameoflife/gameoflife.html
@@ -23,12 +23,12 @@
         interacts with the Game of Life by creating an initial configuration and observing how
         it evolves. It is Turing complete and can simulate a universal constructor or any other
         Turing machine.
-
-        rules
-        1. Any live cell with fewer than two live neighbours dies, as if by underpopulation.
-        2. Any live cell with two or three live neighbours lives on to the next generation.
-        3. Any live cell with more than three live neighbours dies, as if by overpopulation.
-        4. Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.
+        <br>
+        <br>rules
+        <br>1. Any live cell with fewer than two live neighbours dies, as if by underpopulation.
+        <br>2. Any live cell with two or three live neighbours lives on to the next generation.
+        <br>3. Any live cell with more than three live neighbours dies, as if by overpopulation.
+        <br>4. Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.
         </p>
 
     </body>
