--- a/gameoflife/gameoflife.html
+++ b/gameoflife/gameoflife.html
@@ -12,19 +12,25 @@
         <a href="../index.html"><img src="../images/me.jpg" width="50" height="50"></img></a>
         <h1>samcolwill</h1>
 
-        <canvas id="gameoflifecanvas" width="1600" height="800"></canvas>
-        <br></br>
-        <input type="button" value="tick" onclick="gameoflifetick()"/></input>
-        <br></br>
-        <p><u>conway's game of life</u>
-        <br>The Game of Life, also known simply as Life, is a cellular automaton devised by
-        the British mathematician John Horton Conway in 1970. It is a zero-player game, meaning
-        that its evolution is determined by its initial state, requiring no further input. One
-        interacts with the Game of Life by creating an initial configuration and observing how
-        it evolves. It is Turing complete and can simulate a universal constructor or any other
-        Turing machine.
+        <canvas id="gameoflifecanvas" width="1200" height="600"></canvas>
         <br>
-        <br>rules
+        <input type="button" value="start" onclick="gameoflifetick()"/></input>
+        <input type="button" value="stop" onclick="gameoflifetick()"/></input>
+        <input type="button" value="reset" onclick="gameoflifetick()"/></input>
+        <input type="button" value="add still life" onclick="gameoflifetick()"/></input>
+        <input type="button" value="add oscillator" onclick="gameoflifetick()"/></input>
+        <input type="button" value="add spaceship" onclick="gameoflifetick()"/></input>
+        <input type="button" value="add spaceship" onclick="gameoflifetick()"/></input>
+        <input type="button" value="add glider gun" onclick="gameoflifetick()"/></input>
+        <br>
+        <p><u>conway's game of life</u>
+        <br>The Game of Life, also known simply as Life, is a cellular automaton devised by the British mathematician
+        <br>John Horton Conway in 1970. It is a zero-player game, meaningthat its evolution is determined by its
+        <br>initial state, requiring no further input. One interacts with the Game of Life by creating an initial
+        <br>configuration and observing how it evolves. It is Turing complete and can simulate a universal constructor
+        <br>or any other Turing machine.
+        <br>
+        <br><u>rules</u>
         <br>1. Any live cell with fewer than two live neighbours dies, as if by underpopulation.
         <br>2. Any live cell with two or three live neighbours lives on to the next generation.
         <br>3. Any live cell with more than three live neighbours dies, as if by overpopulation.
