--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <p>dreaming in digital. living in realtime. thinking in binary.</p>
         <a href="piglatin/piglatin.html">piglatin</a><br>
         <a href="gameoflife/gameoflife.html">gameoflife</a><br>
+        <a href="collatzconjecture/collatzconjecture.html">collatzconjecture</a><br>
     </body>
 </html>
