pokemon statistic calculator
Pushing mid development as testing CORS error which seems to be related to how the local version of the website is being ran.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p>dreaming in digital. living in realtime. thinking in binary.</p>
         <a href="piglatin/piglatin.html">piglatin</a><br>
         <a href="gameoflife/gameoflife.html">gameoflife</a><br>
-        <a href="collatzconjecture/collatzconjecture.html">collatzconjecture</a><br>
+        <a href="collatzconjecture/collatzconjecture.html">collatzconjecture (unfinished)</a><br>
+        <a href="pokemonstatisticcalculator/pokemonstatisticcalculator.html">pokemonstatisticcalculator</a><br>
     </body>
 </html>
