populating the pokemon selector input box

--- a/pokemonstatisticcalculator/pokemonstatisticcalculator.html
+++ b/pokemonstatisticcalculator/pokemonstatisticcalculator.html
@@ -207,6 +207,8 @@
         <br>
         <br>
         <input id="loadbasestats" type="button" value="load base stats"></input>
+        <input id="insertdave" type="button" value="insert dave"></input>
+        <input id="dave"></input>
         <br>
         <br>
         <input id="hpiv" placeholder="HP IV" class="iv" value = ""></input>
