--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <h1>samcolwill</h1>
         <!--digital insanity - welcome to our world-->
         <p>dreaming in digital. living in realtime. thinking in binary.</p>
-        <a href="piglatin/piglatin.html">piglatin</a><br>
-        <a href="gameoflife/gameoflife.html">gameoflife</a><br>
-        <a href="collatzconjecture/collatzconjecture.html">collatzconjecture (unfinished)</a><br>
-        <a href="pokemonstatisticcalculator/pokemonstatisticcalculator.html">pokemonstatisticcalculator</a><br>
+        <a href="piglatin/piglatin.html">pig latin</a><br>
+        <a href="gameoflife/gameoflife.html">game of life</a><br>
+        <a href="collatzconjecture/collatzconjecture.html">collatz conjecture</a><br>
+        <a href="pokemonstatisticcalculator/pokemonstatisticcalculator.html">pokemon statistic calculator</a><br>
     </body>
 </html>
